--- a/docker/manila/manila-base/Dockerfile.j2
+++ b/docker/manila/manila-base/Dockerfile.j2
@@ -5,7 +5,6 @@ MAINTAINER {{ maintainer }}
     {% if base_distro in ['centos', 'fedora', 'oraclelinux', 'rhel'] %}
 
 RUN yum -y install openstack-manila \
-    yum -y install python-manilaclient \
     && yum clean all
 
     {% endif %}
@@ -15,14 +14,13 @@ ADD manila-base-archive /manila-base-source
 RUN ln -s manila-base-source/* manila \
     && useradd --user-group manila \
     && /var/lib/kolla/venv/bin/pip --no-cache-dir install --upgrade -c requirements/upper-constraints.txt /manila \
-    && mkdir -p /var/lib/manila /etc/manila /var/log/manila /home/manila \
+    && mkdir -p /etc/manila /var/lib/manila /var/cache/manila /var/log/manila /home/manila \
     && cp -r /manila/etc/manila/* /etc/manila/ \
-    && chown -R manila: /etc/manila /var/log/manila /home/manila /var/lib/manila
+    && chown -R manila: /etc/manila /var/lib/manila /var/cache/manila /var/log/manila /home/manila
 
 COPY manila_sudoers /etc/sudoers.d/manila_sudoers
 RUN chmod 750 /etc/sudoers.d \
     && chmod 440 /etc/sudoers.d/manila_sudoers
-
 
 {% endif %}
 
