--- a/docker/cinder/cinder-base/Dockerfile.j2
+++ b/docker/cinder/cinder-base/Dockerfile.j2
@@ -4,14 +4,12 @@ MAINTAINER {{ maintainer }}
 {% if install_type == 'binary' %}
     {% if base_distro in ['centos', 'fedora', 'oraclelinux', 'rhel'] %}
 
-# TODO(Martin) remove python-oslo-policy once RDO package is fixed
 RUN yum -y install openstack-cinder \
-    python-automaton \
-    lvm2 \
-    ceph-common \
-    python-oslo-policy \
-  && yum clean all \
-  && mkdir -p /etc/ceph
+        python-automaton \
+        lvm2 \
+        ceph-common \
+    && yum clean all \
+    && mkdir -p /etc/ceph
 
     {% elif base_distro in ['ubuntu'] %}
 
@@ -29,6 +27,7 @@ RUN apt-get install -y --no-install-recommends \
 RUN yum -y install \
         lvm2 \
         qemu-img \
+        ceph-common \
    && yum clean all
 
      {% elif base_distro in ['ubuntu', 'debian'] %}
@@ -48,7 +47,8 @@ RUN ln -s cinder-base-source/* cinder \
     && /var/lib/kolla/venv/bin/pip --no-cache-dir install --upgrade -c requirements/upper-constraints.txt /cinder \
     && mkdir -p /etc/cinder /var/log/cinder /var/lib/cinder /home/cinder \
     && cp -r /cinder/etc/cinder/* /etc/cinder/ \
-    && chown -R cinder: /etc/cinder /var/log/cinder /var/lib/cinder /home/cinder
+    && chown -R cinder: /etc/cinder /var/log/cinder /var/lib/cinder /home/cinder \
+    && sed -i 's|^exec_dirs.*|exec_dirs=/var/lib/kolla/venv/bin,/sbin,/usr/sbin,/bin,/usr/bin,/usr/local/bin,/usr/local/sbin|g' /etc/cinder/rootwrap.conf
 
 COPY cinder_sudoers /etc/sudoers.d/cinder_sudoers
 RUN chmod 750 /etc/sudoers.d \
