--- a/docker/nova/nova-base/Dockerfile.j2
+++ b/docker/nova/nova-base/Dockerfile.j2
@@ -4,14 +4,10 @@ MAINTAINER {{ maintainer }}
 {% if install_type == 'binary' %}
     {% if base_distro in ['centos', 'fedora', 'oraclelinux', 'rhel'] %}
 
-# TODO(mandre) remove python-oslo-policy once RDO package is fixed
-# https://github.com/openstack-packages/nova/blob/rpm-master/openstack-nova.spec
-# https://review.gerrithub.io/#/c/255435/
 RUN yum -y install \
         openstack-nova-common \
         python-keystoneclient \
         python-cinderclient \
-        python-oslo-policy \
         bridge-utils \
     && yum clean all
 
@@ -50,7 +46,8 @@ RUN ln -s nova-base-source/* nova \
     && /var/lib/kolla/venv/bin/pip --no-cache-dir install --upgrade -c requirements/upper-constraints.txt /nova \
     && mkdir -p /etc/nova /var/log/nova /home/nova /var/lib/nova \
     && cp -r /nova/etc/nova/* /etc/nova/ \
-    && chown -R nova: /etc/nova /var/log/nova /home/nova /var/lib/nova
+    && chown -R nova: /etc/nova /var/log/nova /home/nova /var/lib/nova \
+    && sed -i 's|^exec_dirs.*|exec_dirs=/var/lib/kolla/venv/bin,/sbin,/usr/sbin,/bin,/usr/bin,/usr/local/bin,/usr/local/sbin|g' /etc/nova/rootwrap.conf
 
 COPY nova_sudoers /etc/sudoers.d/nova_sudoers
 RUN chmod 750 /etc/sudoers.d \
