--- a/docker/swift/swift-base/Dockerfile.j2
+++ b/docker/swift/swift-base/Dockerfile.j2
@@ -9,6 +9,19 @@ RUN yum -y install openstack-swift \
 
     {% endif %}
 {% elif install_type == 'source' %}
+    {% if base_distro in ['centos', 'fedora', 'oraclelinux', 'rhel'] %}
+
+RUN yum -y install \
+        liberasurecode-devel \
+    && yum clean all
+
+    {% elif base_distro in ['ubuntu'] %}
+
+RUN apt-get install -y --no-install-recommends \
+        liberasurecode-dev \
+    && apt-get clean
+
+    {% endif %}
 
 ADD swift-base-archive /swift-base-source
 RUN ln -s swift-base-source/* swift \
@@ -20,6 +33,5 @@ RUN ln -s swift-base-source/* swift \
 
 {% endif %}
 
-COPY config-swift.sh /usr/local/bin/kolla_config_swift
 COPY build-swift-ring.py /usr/local/bin/kolla_build_swift_ring
-RUN mkdir /opt/swift
+RUN mkdir -p /opt/swift
