update manila.conf and kolla_toolbox

--- a/ansible/roles/manila/templates/manila.conf.j2
+++ b/ansible/roles/manila/templates/manila.conf.j2
@@ -41,7 +41,7 @@ auth_type = password
 project_domain_id = default
 user_domain_id = default
 project_name = service
-username = {{ cinder_keystone_user }}
+username = cinder_keystone_user
 password = {{ cinder_keystone_password }}
 
 [nova]
